fixed a styling bug and some additional spacing problems

--- a/index.css
+++ b/index.css
@@ -20,6 +20,7 @@
     --secondary-text-size: 14px;
     --secondary-text-height: 18px;
     --standard-width: 1144px;
+    --standard-border-radius: 25px;
     --standard-box-shadow: 0px 2px 40px rgba(0, 0, 0, 0.15);
 
     /* SPACING */
@@ -56,7 +57,6 @@ html, body {
 body {
     font-family: var(--body-font);
     color: var(--text-dark);
-    width: 100%;
     margin: 0;
     box-sizing: border-box;
     padding: var(--spacing-sm) 0 0 0;
@@ -167,7 +167,7 @@ p {
     font-size: var(--button-size);
     letter-spacing: 1.25px;
     font-weight: bold;
-    border-radius: 20px;
+    border-radius: var(--standard-border-radius);
     background-color: var(--primary-accent);
     border: none;
     padding: var(--spacing-sm) var(--spacing-md);
@@ -185,7 +185,7 @@ p {
     font-size: var(--button-size);
     letter-spacing: 1.25px;
     font-weight: bold;
-    border-radius: 20px;
+    border-radius: var(--standard-border-radius);
     border: none;
     color: var(--primary-accent);
     background-color: transparent;
@@ -423,24 +423,26 @@ p {
     grid-area: card;
     width: 100%;
     box-shadow: var(--standard-box-shadow);
+    border-radius: var(--standard-border-radius);
 }
 
 #slack-invoice {
     grid-area: slack;
     width: 100%;
     box-shadow: var(--standard-box-shadow);
+    border-radius: var(--standard-border-radius);
 }
 
 #phone {
     grid-area: phone;
     width: 100%;
-    box-shadow: var(--standard-box-shadow);
 }
 
 #dash {
     grid-area: dash;
     width: 100%;
     box-shadow: var(--standard-box-shadow);
+    border-radius: var(--standard-border-radius);
 }
 
 /* INTEGRATIONS SECTION STYLES */
@@ -504,12 +506,12 @@ p {
 #api-code {
     max-width: 470px;
     margin: 0 0 var(--spacing-md) 0;
-    border-radius: 20px;
+    border-radius: var(--standard-border-radius);
 }
 
 #terminal-code {
     max-width: 470px;
-    border-radius: 20px;
+    border-radius: var(--standard-border-radius);
 }
 
 /* WHY SWIPE STYLES */
@@ -630,7 +632,7 @@ p {
     width: 540px;
     height: 446px;
     box-shadow: var(--standard-box-shadow);
-    border-radius: 20px;
+    border-radius: var(--standard-border-radius);
     overflow: hidden;
 }
 
@@ -798,6 +800,11 @@ p {
     .section-container {
         padding: 0 var(--spacing-md);
     }
+
+    /*PARTNERS GRID SECTION*/
+    .partners-grid {
+        margin: 0 0 var(--spacing-lg) 0;
+    }
 }
 
 @media only screen and (max-width: 950px) {
@@ -890,7 +897,7 @@ p {
         width: 50px;
         height: 30px;
         background-color: rgba(250, 250, 250, 0.25);
-        border-radius: 20px;
+        border-radius: var(--standard-border-radius);
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -1045,6 +1052,7 @@ p {
     /*PARTNERS SECTION*/
     .partners-grid {
         grid-template-columns: 1fr 1fr;
+        margin: var(--spacing-lg) 0;
     }
 
     /*UNIFIED PLATFORM SECTION*/
